# discord-chat

./: .env.example  .gitignore  AWS_REMOVAL_COMPLETE_VERIFICATION.md  AWS_REMOVAL_EVIDENCE.md  AWS_REMOVAL_VERIFICATION.md  Makefile  README.md  SECURITY-FIXES-APPLIED.md  bandit-report.json  cli.py  coverage.json  digest-jima-20251218-1502.md  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml
discord_chat/: __init__.py
discord_chat/commands/: activity.py  digest.py  version.py
discord_chat/services/: discord_client.py
discord_chat/services/llm/: __init__.py  base.py  claude.py  openai_provider.py
discord_chat/utils/: console_output.py  digest_formatter.py  security_logger.py
docs/: README.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md
docs/development/: CONVENTIONS.md
docs/implementation/: adding-new-command.md
docs/reports/: TEST_COVERAGE_SUMMARY.md
docs/security/: SECURITY.md  remaining-issues.md
docs/security/review/: QUICK-REFERENCE.md  code-quality-analysis.md  threat-model.md  vulnerability-analysis.md
hooks/: pre-commit
security-review/: 00-START-HERE.md  FINDINGS-SUMMARY.md  INDEX.md  README.md  security-recommendations.md  security-summary.md  vulnerability-analysis.md
tests/: test_activity.py  test_cli.py  test_digest.py  test_digest_security.py  test_discord_client.py  test_discord_client_async.py  test_llm_providers.py  test_llm_security.py  test_security_logger.py  test_version.py
